# sdl2opengl

./: .gitignore  CMakeLists.txt
src/: fragShader.glsl  main.cpp  vertShader.glsl
